<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <?xml version="1.0" encoding="utf-8"?>

    <data>
        <variable name="Alas" type="Double"/>
        <variable name="Tinggi" type="Double"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".SegitigaFragment">
        <EditText
                android:hint="@string/alas"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/tfAlasSegitiga" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="32dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <EditText
                android:hint="@string/tinggi"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/tfTinggiSegitiga" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/tfAlasSegitiga" tools:ignore="LabelFor"/>
        <Button
                android:text="@string/hitung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bHitungSegitiga" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="50dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tfTinggiSegitiga"/>
        <TextView
                android:text="@string/luas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvLuasSegitiga" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="50dp"
                android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/bHitungSegitiga"
                android:textSize="18sp"/>
        <TextView
                android:text="@string/keliling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvKelilingSegitiga" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="50dp"
                app:layout_constraintTop_toBottomOf="@+id/tvLuasSegitiga" android:layout_marginTop="24dp"
                android:textSize="18sp"/>
        <Button
                android:text="@string/share"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/bShare" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="50dp"
                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/tvKelilingSegitiga"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

