<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
>

    <data>
        <variable
                name="panjang"
                type="Integer"
        />
        <variable
                name="lebar"
                type="Integer"
        />
    </data>
    <?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".PersegiPanjangFragment">
        <EditText
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/panjang"
                android:ems="10"
                android:id="@+id/tfPanjangPersegiPanjang" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.274"
                app:layout_constraintVertical_bias="0.071"/>
        <EditText
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/lebar"
                android:ems="10"
                android:id="@+id/tfLebarPersegiPanjang"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/tfPanjangPersegiPanjang"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="16dp"/>
        <Button
                android:text="@string/hitung"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/bHitung" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/tfLebarPersegiPanjang"/>
        <TextView
                android:text="@string/luas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvLuasPersegiPanjang"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/bHitung" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp" android:textSize="18sp"/>
        <TextView
                android:text="@string/keliling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvKelilingPersegiPanjang" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/tvLuasPersegiPanjang"
                android:textSize="18sp"/>
        <Button
                android:text="@string/share"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/bShare" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/tvKelilingPersegiPanjang"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

